# Lingxin

./: .gitignore  .pre-commit-config.yaml  README.md  docs-viewer.html  environment-gpu.yml  environment.yml  index.html  pyproject.toml  requirements.txt  resources.html
api/: app.py
data/: csl_vocab.csv  vocab.csv  vocab_mvp.csv
docs/: 01-quickstart.md  02-architecture.md  03-data-collection.md  04-training.md  05-code-guide.md  06-design-patterns.md  07-faq.md  08-testing.md  09-configuration-guide.md  README.md  architecture.md  data_collection.md  development.md  experiments.md
docs/journal/: development.md  experiments.md
docs/learning/: 01-项目概述.md  02-核心技术解析.md  03-环境配置指南.md  04-代码实现详解.md  05-常见问题解决方案.md  (+2 more)
learning/: 00_env_setup.py  01_python_basics.py  02_opencv_basics.py  02_opencv_video.py  03_mediapipe_intro.py  04_hand_detection_draw.py  04_hand_detection_simple.py  05_pose_detection.py  06_numpy_intro.py  06_numpy_operations.py  07_feature_extraction.py  08_svm_intro.py  09_lstm_intro.py  10_data_collection.py  11_config_management.py  12_training_pipeline.py  13_data_augmentation.py  README.md  download_models.py
src/: config.py  constants.py
tests/: test_augmentation.py  test_collect_data.py  test_collect_from_video.py  test_config.py  test_constants.py  test_feature_extractor.py  test_lstm_model.py  test_trainer.py  test_transformer_model.py
tools/: collect_data.py  collect_from_video.py  evaluate.py  inference.py  preprocess.py  train.py
web/: dashboard.html  demo.html  docs-viewer.html  docs.html  index.html  index_new.html  resources.html
(+18 files in other folders)
